--- a/package.json
+++ b/package.json
@@ -6,9 +6,14 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "moment-timezone": "^0.5.45",
+    "rc-slider": "^10.6.2",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
+    "react-datepicker": "^6.9.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "react-time-picker": "^6.6.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
